--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
+    "paths": {
+      "@angular/*": ["./node_modules/@angular/*"]
+    },
     "lib": [
       "es2020",
       "dom"
